[tool.poetry]
name = "neural_citation"
version = "0.1.0"
description = ""
authors = ["Kaito Sugimoto <hellorusk1998@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.3"
torch = "1.1.0"
torchtext = "0.3.1"
tensorboard = "1.14.0"
spacy = "2.1.6"
gensim = "3.8.0"
nltk = "3.4.4"
pandas = "0.25.0"
tqdm = "4.32.2"
Pillow = "^8.0.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
